test/noLengthAssign.slq

def main(){
	x:=(1,2,3);
	x.length=4; /// error
	y:=[1,2,3];
	y.length=5; /// error
	z:=(1,(2,3));
	z.length=6; /// error
	return (x,y);
}
